--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <h2>2. Afbeeldingen toevoegen</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/pictures.png">
+                        <img src="./images/6621699b97733065bfda9edcd06bcbd9.jpg">
                     </div>
                 </header>
 
