--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <header>
                     <div class="title">
                         <h2>5. Een branch rebasen</h2>
-                        <p id="branch">master</p>
+                        <p id="branch">rebase</p>
                     </div>
                     <div class="meta">
                         <img src="images/rebase.png">
